--- a/study2/experiment/index.html
+++ b/study2/experiment/index.html
@@ -137,7 +137,7 @@
                         fiction_cue,
                         fiction_fixation1b,
                         fiction_showimage1,
-                        // fiction_ratings1,
+                        fiction_ratings1,
                     ],
                 })
                 timeline.push(fiction_feedback1)
