--- a/study2/experiment/index.html
+++ b/study2/experiment/index.html
@@ -127,8 +127,7 @@
                 timeline.push(eyetracking_recalibration)
                 // Phase 1B -------------------------------------------------------------
                 timeline.push({
-                    timeline_variables: stimuli
-                        .slice(
+                    timeline_variables: stimuli.slice(
                             Math.ceil(stimuli.length / 2),
                             stimuli_list.length
                         ),
