even smaller changes

--- a/study2/experiment/index.html
+++ b/study2/experiment/index.html
@@ -148,7 +148,7 @@
             timeline.push(questionnaires_instructions) // Instructions Questionnaires
             timeline.push(questionnaire_cops) // sexual activity
             timeline.push(questionnaire_bait) // Beliefs about AI technonology
-            timeline.push(feedback_bait) // Graph feedback
+            //timeline.push(feedback_bait) // Graph feedback
 
             // Stage 2 ==============================================================
             timeline.push(fiction_instructions2)
