--- a/study2/experiment/index.html
+++ b/study2/experiment/index.html
@@ -23,9 +23,9 @@
     <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe@0.4.0"></script>
 
     <!-- To save data on pavlovia -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://lib.pavlovia.org/jspsych-pavlovia-3.0.0.js"></script>
-    <!-- <script src="utils/jspsych-pavlovia-3.0.0.js"></script> -->
+    <script src="utils/jspsych-pavlovia-3.0.0.js"></script> -->
 
     <!-- Eye-tacking -->
     <script src="https://cdn.jsdelivr.net/gh/jspsych/jspsych@jspsych@8.1.0/examples/js/webgazer/webgazer.js"></script>
@@ -106,14 +106,6 @@
     // Initialize timeline
     var timeline = []
 
-    // Initialize connection to Pavlovia 
-    var pavlovia_init = {
-        type: jsPsychPavlovia,
-        command: "init",
-        show_progress_bar: true
-    }
-    timeline.push(pavlovia_init)
-
     participant_ID = jsPsych.randomization.randomID(10)
 
     // Demographics ===========================================================
@@ -122,110 +114,99 @@
     timeline.push(demographics_questions)
     timeline.push(fiction_preloadstims)
 
-    // // Eye-tracking ==============================================================
-    // timeline.push(eyetracking_consent)
-    // timeline.push(eyetracking_calibration) // include full-screen 
+    // Eye-tracking ==============================================================
+    timeline.push(eyetracking_consent)
+    timeline.push(eyetracking_calibration) // include full-screen 
 
-    // // Fiction stage 1 ===========================================================
-    // // timeline.push(eyetracking_fullscreen) // full-screen if they don't consent
+    // Fiction stage 1 ===========================================================
+    // timeline.push(eyetracking_fullscreen) // full-screen if they don't consent
 
-    // // Enter fullscreen mode
-    // timeline.push({
-    //     timeline: [fiction_instructions1],
-    //     on_finish() {
-    //         //Phase 1A -------------------------------------------------------------
-    //         timeline.push({
-    //             timeline_variables: stimuli.slice(
-    //                 0,
-    //                 Math.ceil(stimuli.length / 2)
-    //             ),
-    //             timeline: [
-    //                 fiction_fixation1a,
-    //                 fiction_cue,
-    //                 fiction_fixation1b,
-    //                 fiction_showimage1,
-    //                 fiction_ratings1,
-    //             ],
-    //         })
-
-    //         // // Break ----------------------------------------------------------------
-    //         timeline.push(fiction_phase1_break)
-    //         timeline.push(eyetracking_recalibration)
-    //         // Phase 1B -------------------------------------------------------------
-    //         timeline.push({
-    //             timeline_variables: stimuli.slice(
-    //                 Math.ceil(stimuli.length / 2),
-    //                 stimuli.length
-    //             ),
-    //             timeline: [
-    //                 fiction_fixation1a,
-    //                 fiction_cue,
-    //                 fiction_fixation1b,
-    //                 fiction_showimage1,
-    //                 fiction_ratings1,
-    //             ],
-    //         })
-    //         timeline.push(fiction_feedback1)
-
-    //         // // Questionnaires ===========================================================
-    //         timeline.push(questionnaires_instructions) // Instructions Questionnaires
-    //         timeline.push(questionnaire_cops) // sexual activity
-    //         timeline.push(questionnaire_bait) // Beliefs about AI technonology
-    //         //timeline.push(feedback_bait) // Graph feedback
-
-    //         // Stage 2 ==============================================================
-    //         timeline.push(fiction_instructions2)
-    //         timeline.push({
-    //             timeline_variables: jsPsych.randomization.shuffleNoRepeats(stimuli),
-    //             timeline: [
-    //                 fiction_fixation2,
-    //                 fiction_showimage2,
-    //                 fiction_ratings2,
-    //             ],
-    //         })
-    //         timeline.push(experiment_feedback)
-
-    // End ===================================================================
-    timeline.push(demographics_debriefing)
-
-    // Save data (without eyetracking) via DataPipe
+    // Enter fullscreen mode
     timeline.push({
-        type: jsPsychPipe,
-        action: "save",
-        experiment_id: "OZnmkS9sQSxE", // This in generated in the DataPipe interface
-        filename: `${participant_ID}.csv`,
-        data_string: () => {
-            const filtered_data = jsPsych.data.get().ignore(['raw_gaze', 'percent_in_roi', 'average_offset', // calibration columns 
-                'validation_points', 'webgazer_data', 'webgazer_targets']) // fiction columns 
+        timeline: [fiction_instructions1],
+        on_finish() {
+            //Phase 1A -------------------------------------------------------------
+            timeline.push({
+                timeline_variables: stimuli.slice(
+                    0,
+                    Math.ceil(stimuli.length / 2)
+                ),
+                timeline: [
+                    fiction_fixation1a,
+                    fiction_cue,
+                    fiction_fixation1b,
+                    fiction_showimage1,
+                    fiction_ratings1,
+                ],
+            })
 
-            return filtered_data.csv()
-        }
+            // // Break ----------------------------------------------------------------
+            timeline.push(fiction_phase1_break)
+            timeline.push(eyetracking_recalibration)
+            // Phase 1B -------------------------------------------------------------
+            timeline.push({
+                timeline_variables: stimuli.slice(
+                    Math.ceil(stimuli.length / 2),
+                    stimuli.length
+                ),
+                timeline: [
+                    fiction_fixation1a,
+                    fiction_cue,
+                    fiction_fixation1b,
+                    fiction_showimage1,
+                    fiction_ratings1,
+                ],
+            })
+            timeline.push(fiction_feedback1)
+
+            // // Questionnaires ===========================================================
+            timeline.push(questionnaires_instructions) // Instructions Questionnaires
+            timeline.push(questionnaire_cops) // sexual activity
+            timeline.push(questionnaire_bait) // Beliefs about AI technonology
+            //timeline.push(feedback_bait) // Graph feedback
+
+            // Stage 2 ==============================================================
+            timeline.push(fiction_instructions2)
+            timeline.push({
+                timeline_variables: jsPsych.randomization.shuffleNoRepeats(stimuli),
+                timeline: [
+                    fiction_fixation2,
+                    fiction_showimage2,
+                    fiction_ratings2,
+                ],
+            })
+            timeline.push(experiment_feedback)
+
+            // End ===================================================================
+            timeline.push(demographics_debriefing)
+
+            // Save data (without eyetracking) via DataPipe
+            timeline.push({
+                type: jsPsychPipe,
+                action: "save",
+                experiment_id: "OZnmkS9sQSxE", // This in generated in the DataPipe interface
+                filename: `${participant_ID}.csv`,
+                data_string: () => {
+                    const filtered_data = jsPsych.data.get().ignore(['raw_gaze', 'percent_in_roi', 'average_offset', // calibration columns 
+                        'validation_points', 'webgazer_data', 'webgazer_targets']) // fiction columns 
+
+                    return filtered_data.csv()
+                }
+            })
+            // Save all data via DataPipe
+            timeline.push({
+                type: jsPsychPipe,
+                action: "save",
+                experiment_id: "OZnmkS9sQSxE", // This in generated in the DataPipe interface
+                filename: `${participant_ID}_Full.csv`,
+                data_string: () => jsPsych.data.get().csv(),
+            })
+
+            // Exit fullscreen mode
+            timeline.push(fullscreen_off)
+            timeline.push(demographics_endscreen)
+        },
     })
-    // Save all data via DataPipe
-    timeline.push({
-        type: jsPsychPipe,
-        action: "save",
-        experiment_id: "OZnmkS9sQSxE", // This in generated in the DataPipe interface
-        filename: `${participant_ID}_Full.csv`,
-        data_string: () => jsPsych.data.get().csv(),
-    })
-
-    // Close connection to Pavlovia---*/
-    var pavlovia_finish = {
-        type: jsPsychPavlovia,
-        command: "finish",
-        participantId: participant_ID,
-        // completedCallback: function () {
-        //     window.location.replace('https://app.prolific.co/submissions/complete?cc=XXX')
-        // }
-    }
-    timeline.push(pavlovia_finish)
-
-    // Exit fullscreen mode
-    timeline.push(fullscreen_off)
-    timeline.push(demographics_endscreen)
-    //     },
-    // })
 
     // Run the timeline -------------------------------------------------------
     jsPsych.run(timeline)
